Remove deprecated event.keyCode

--- a/Oefening3/css/oefening2.css
+++ b/Oefening3/css/oefening2.css
@@ -3,13 +3,13 @@ body {
    padding: 0px;
 }
 
-.main{
+.main {
    width: 850px;
    margin-left: auto;
    margin-right: auto;
 }
 
-#tekenCanvas{
+#gameCanvas {
    background-color: aliceblue;
-   border: 1px solid red;
+   border: 1px solid black;
 }
