--- a/Oefening4/css/oefening3.css
+++ b/Oefening4/css/oefening3.css
@@ -3,13 +3,13 @@ body {
    padding: 0px;
 }
 
-.main{
+.main {
    width: 850px;
    margin-left: auto;
    margin-right: auto;
 }
 
-#gameCanvas{
+#tekenCanvas {
    background-color: aliceblue;
-   border: 1px solid black;
+   border: 1px solid red;
 }
